# FeatureExtractorCuda

./: .gitignore  README.md  computeScript.py  installOpencv.sh
Appunti/: Materiale.md  appunti.md  appuntiC.md
FeatureExtractor/C/: .gitignore  CMakeCache.txt  FeatureComputation.cpp  FeatureComputation.h  FeatureExtractor.cpp  FeaturesExtractor  FeaturesExtractor.cbp  GLCM.cpp  GLCM.h  GrayPair.cpp  GrayPair.h  Makefile  MetaGLCM.cpp  MetaGLCM.h  SupportCode.cpp  SupportCode.h  cmake_install.cmake  testImage.tiff
FeatureExtractor/C++/: AggregatedGrayPair.cpp  AggregatedGrayPair.h  CMakeLists.txt  Direction.cpp  Direction.h  FeatureComputer.cpp  FeatureComputer.h  FeatureExtractor.cpp  Features.cpp  Features.h  GLCM.cpp  GLCM.h  GrayPair.cpp  GrayPair.h  Image.cpp  Image.h  ImageFeatureComputer.cpp  ImageFeatureComputer.h  Window.cpp  Window.h  WindowFeatureComputer.cpp  WindowFeatureComputer.h  Windows.cpp  main.cpp
Implementations/C++/: CMakeLists.txt  Direction.h  FeatureComputer.cpp  FeatureComputer.h  Features.cpp  Features.h  GLCM.cpp  GLCM.h  GrayPair.cpp  Image.cpp  Image.h  ImageFeatureComputer.cpp  ImageFeatureComputer.h  ImageLoader.cpp  ImageLoader.h  WindowFeatureComputer.cpp  WindowFeatureComputer.h  main.cpp
Implementations/C++/src/: AggregatedGrayPair.h  Direction.h  FeatureComputer.cpp  FeatureComputer.h  Features.h  GLCM.cpp  GLCM.h  GrayPair.cpp  GrayPair.h  Image.cpp  Image.h  ImageData.cpp  ImageData.h  ImageFeatureComputer.cpp  ImageFeatureComputer.h  ImageLoader.cpp  ImageLoader.h  ProgramArguments.cpp  ProgramArguments.h  Utils.cpp  Utils.h  Window.cpp  Window.h  WindowFeatureComputer.cpp  WindowFeatureComputer.h  WorkArea.h
Implementations/Cuda/: CMakeCache.txt  CMakeLists.txt  CompileScript.sh  Makefile  cmake_install.cmake  compileScript.sh
Implementations/Cuda/src/: AggregatedGrayPair.cu  AggregatedGrayPair.h  CudaFunctions.cu  CudaFunctions.h  Direction.cu  Direction.h  FeatureComputer.cpp  FeatureComputer.cu  FeatureComputer.h  Features.cu  Features.h  GLCM.cpp  GLCM.cu  GLCM.h  GrayPair.cu  GrayPair.h  Image.cpp  Image.cu  Image.h  ImageData.cu  ImageData.h  ImageFeatureComputer.cu  ImageFeatureComputer.h  ImageLoader.cu  ImageLoader.h  ProgramArguments.cpp  ProgramArguments.h  Window.cu  Window.h  WindowFeatureComputer.cu  WindowFeatureComputer.h  WorkArea.cpp  WorkArea.cu  WorkArea.h  main.cpp
Implementations/Matlab/: GLCM_Features1.m  README.md
Implementations/OldVersion/: CMakeLists.txt  README.md
Implementations/OldVersion/src/: AggregatedGrayPair.cpp  AggregatedGrayPair.h  Direction.cpp  Direction.h  FeatureComputer.cpp  FeatureComputer.h  Features.cpp  GrayPair.h  ImageFeatureComputer.cpp  ImageLoader.cpp  ImageLoader.h  ProgramArguments.cpp  WindowFeatureComputer.h  main.cpp
Implementations/Pre-Cuda/: AggregatedGrayPair.cpp  CMakeLists.txt  Direction.cpp  FeatureComputer.cpp  FeatureComputer.h  GLCM.cpp  GLCM.h  Image.cpp  Image.h  ImageFeatureComputer.cpp  ImageFeatureComputer.h  ImageLoader.cpp  ImageLoader.h  WindowFeatureComputer.cpp  WindowFeatureComputer.h  WorkArea.cpp  WorkArea.h  main.cpp
Implementations/Pre-Cuda/src/: AggregatedGrayPair.cpp  AggregatedGrayPair.h  Direction.cpp  Direction.h  FeatureComputer.cpp  FeatureComputer.h  Features.cpp  Features.h  GLCM.cpp  GLCM.h  GrayPair.cpp  GrayPair.h  Image.cpp  Image.h  ImageData.cpp  ImageData.h  ImageFeatureComputer.cpp  ImageFeatureComputer.h  ImageLoader.cpp  ImageLoader.h  ProgramArguments.cpp  ProgramArguments.h  Window.cpp  Window.h  WindowFeatureComputer.cpp  WindowFeatureComputer.h  WorkArea.cpp  WorkArea.h  main.cpp
Implementations/prove/: CMakeLists.txt  main.cpp
Prove/saxpy/C/: a.out  gmon.out  saxpy.c
Prove/saxpy/CUDA/: CudaSaxpy.cu  a.out
Prove/sum2Vectors/C/: a.out  gmon.out  sum2Vect.c
Prove/sum2Vectors/Cuda/: Cudasum2Vect.cu  a.out
SampleImages/: brain1.tiff  brain10.tiff  brain11.tiff  brain12.tiff  brain13.tiff  brain14.tiff  brain15.tiff  brain2.tiff  brain3.tiff  brain4.tiff  brain5.tiff  brain6.tiff  brain7.tiff  brain8.tiff  brain9.tiff  cpuCompute.py  cudaCompute.py  gpuCompute.py  prostata.tiff  prostate1.tiff  prostate10.tiff  prostate11.tiff  prostate12.tiff  prostate13.tiff  prostate14.tiff  prostate15.tiff  prostate2.tiff  prostate3.tiff  prostate4.tiff  prostate5.tiff  prostate6.tiff  prostate7.tiff  prostate8.tiff  prostate9.tiff  uterine1.tiff  uterine10.tiff  uterine11.tiff  uterine12.tiff  uterine13.tiff  uterine14.tiff  (+9 more)
Scripts/: gpuCompute.py
